fixed alignment and text colour

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,9 +27,9 @@ body {
     )
     rgb(var(--background-start-rgb)); */
     background: white;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%) */
 }
